prod/microcks-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: microcks
    group: microcks
  name: microcks-grpc
  namespace: microcks
spec:
  ingressClassName: kong
  rules:
  - host: microcks-grpc.bloco.live
    http:
      paths:
      - backend:
          service:
            name: microcks-grpc
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - microcks-grpc.bloco.live
